Implementa función actualizar lista

--- a/challenge-amigo-secreto_esp-main/index.html
+++ b/challenge-amigo-secreto_esp-main/index.html
@@ -13,8 +13,9 @@
 <body>
     <main class="main-content">
         <header class="header-banner">
+            <img src="assets/logo.png" alt="Logo Oracle + Alura" class="logo-img">
             <h1 class="main-title">Amigo Secreto!</h1>
-            <img src="assets/amigo-secreto.png" alt="Imagen representativa de amigo secreto">
+            <img src="assets/amigo-secreto.png" alt="Imagen representativa de amigo secreto" class="img-amigo">
         </header>
         
         <section class="input-section">
